perubahan header dan footer

--- a/Company profile/index.html
+++ b/Company profile/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
 
+    <header>ini header</header>
+
     <h1>PT Rafly</h1>
 
     <div>Lorem Ipsum</div>
     
+    <footer> ini footer </footer>
 </body>
 </html>
